<resources>
    <string name="app_name">Project_IoT_auto_watering</string>
    <string name="green_house">Cây xanh</string>
    <string name="smart_system">Hệ thống tưới cây thông minh</string>
    <string name="get_start">Get Start</string>
    <string name="hoangkhactien204_gmail_com">hoangkhactien204@gmail.com</string>
    <string name="hello">hello</string>
    <string name="_11_11">11:11</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_one">Update</string>
    <string name="startDate">Ngày học: </string>
    <string name="so0">0</string>
    <string name="gachCheo">/</string>
    <string name="ghi_ch">Ghi chú</string>
    <string name="ti_u">Tiêu đề</string>
    <string name="h_y">Hủy</string>
    <string name="th_i_gian">thời gian</string>
    <string name="_10_45">[10:45]</string>
    <string name="th_ng_b_o">Thông báo</string>
    <string name="ch_n_th_ng_b_o_tr_c">Chọn thông báo trước</string>
    <string name="todo">TODO</string>
    <string name="hello_nwelcome_to_likeu">HELLO!\nWelcome to LikeU</string>
    <string name="email">Email/Phone</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="or_login_with">────────────── Or login with ──────────────</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to login</string>
    <string name="name">Name</string>
    <string name="my_plant">Cây của bạn</string>
    <string name="home">Home</string>
    <string name="sensor">Sensor</string>
    <string name="more">More</string>
    <string name="tomato">Cà chua</string>
    <string name="Sprinkler">Tưới cây</string>
    <string name="setting">Tạo lịch</string>
    <string name="infor_crop">Từ điển cây</string>
    <string name="_176_c">°C</string>
    <string name="_25">0</string>
    <string name="tempe">Nhiệt độ</string>
    <string name="humidity">Độ ẩm không khí</string>
    <string name="_62">0</string>
    <string name="per"><b>%</b></string>
    <string name="soil">Độ ẩm đất</string>
    <string name="state_sprinkler">Hãy tưới nước cho cây</string>
    <string name="_30_ph_t">0 phút</string>
    <string name="next_watering">Lần tưới tiếp</string>
    <string name="count_down">Đếm ngược</string>
    <string name="_00_00">00:00</string>
    <string name="date">11/11/2025</string>
    <string name="h_ng_ng_y">Hàng ngày</string>
    <string name="time_duration">10</string>
    <string name="save">Lưu</string>
    <string name="add">Thêm</string>
    <string name="schedule">Lịch tưới cây</string>
    <string name="history">Lịch sử tưới cây</string>
    <string name="infor_tree">Từ điển cây</string>
    <string name="add_crops">Thêm cây của bạn</string>
    <string name="time_history">Chủ nhật, 6 tháng 2 2025</string>
    <string name="value_water">10l</string>
    <string name="th_i_gian_06_45">Thời gian: 06:45</string>
    <string name="th_i_gian_t_i_10s">Thời gian tưới: 10s</string>
    <string name="l_ng_n_c_2l">Lượng nước: 2l</string>
    <string name="status">Trạng thái tưới</string>
    <string name="type">Chế độ tưới</string>
    <string name="note_log">Ghi chú: </string>
    <string name="input_crops">Nhập cây của bạn</string>
    <string name="input_device">Nhập ID của thiết bị</string>
    <string name="ssid_wifi">Danh sách wifi Esp</string>
    <string name="input_duration">Nhập thời gian tưới</string>
    <string name="dotdotdot">....</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Đăng xuất</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="name_sensor">HKT04</string>
    <string name="schedule_water_tree">6/10/2025, 16:15\n10s, Lap lai: hàng tuần</string>
    <string name="note">* Khi không có lịch, cây sẽ được tưới tự động theo chu kỳ sinh học của cây</string>
    <string name="des_add_crops">Thêm cây của bạn</string>
    <string name="bind_sensor">Gắn cảm biến</string>
    <string name="change_picture">Thay ảnh cây</string>
    <string name="delete">Xóa</string>
    <string name="second">giây</string>
    <string name="hour">giờ</string>
    <string name="minute">phút</string>
    <string name="denta_time">khoảng thời gian</string>
    <string name="_4hour">Mỗi 4 giờ</string>
    <string name="_6hour">Mỗi 6 giờ</string>
    <string name="_12hour">Mỗi 12 giờ</string>
    <string name="_1day">Hàng ngày</string>
    <string name="_week_2">Mỗi thứ 2</string>
    <string name="_week_3">Mỗi thứ 3</string>
    <string name="_week_4">Mỗi thứ 4</string>
    <string name="_week_5">Mỗi thứ 5</string>
    <string name="_week_6">Mỗi thứ 6</string>
    <string name="_week_7">Mỗi thứ 7</string>
    <string name="_week_8">Mỗi chủ nhật</string>
    <string name="_3day">Mỗi 3 ngày</string>
    <string name="_5day">Mỗi 5 ngày</string>
    <string name="_1week">Hàng tuần</string>
    <string name="_2week">Mỗi 2 tuần</string>
    <string name="no">Không</string>
    <string name="title_description">1. Đặc điểm, công dụng, cách trồng</string>
    <string name="conditions">2. Điều kiện thích hợp</string>
    <string name="max_Temperature">o Nhiệt độ giới hạn trên là: </string>
    <string name="min_Temperature">o Nhiệt độ giới hạn dưới là: </string>
    <string name="max_AirHumidity">o Độ ẩm không khí tối đa là: </string>
    <string name="min_AirHumidity">o Độ ẩm không khí tối thiểu là: </string>
    <string name="max_SoilMoisture">o Độ ẩm đất tối đa là: </string>
    <string name="min_SoilMoisture">o Độ ẩm đất tối thiểu là: </string>
    <string name="_10">100</string>
    <string name="mode">Chế độ</string>
    <string name="manual">Tưới thủ công</string>
    <string name="manual_be">manual</string>
    <string name="schedule_water">Tưới theo lịch</string>
    <string name="schedule_water_be">schedule</string>
    <string name="auto">Tưới tự động</string>
    <string name="auto_backend">auto</string>
    <string name="Off">Off</string>
    <string name="connect">Đã kết nối</string>
    <string name="disconnect">Chưa kết nối</string>
    <string name="connect_wifi">Kết nối</string>
    <string name="complete">completed</string>
    <string name="failed">failed</string>
    <string name="cancelled">cancelled</string>
    <string name="pumped">Cây đã ở điều kiện thích hợp!</string>
</resources>