<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_rounded"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:padding="2dp"
        android:src="@drawable/icon_back"
        app:layout_constraintBottom_toBottomOf="@+id/img_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_rounded" />

    <TextView
        android:id="@+id/tv_name_crop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/setting"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/icon_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_back"
        app:layout_constraintTop_toTopOf="@+id/icon_back" />

    <ImageView
        android:id="@+id/img_date"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_rounded" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_date"
        app:layout_constraintStart_toEndOf="@+id/img_date"
        app:layout_constraintTop_toTopOf="@+id/img_date" />

    <ImageView
        android:id="@+id/img_time"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/icon_time"
        app:layout_constraintBottom_toBottomOf="@+id/img_date"
        app:layout_constraintEnd_toStartOf="@+id/tv_time"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/img_date" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/_11_11"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_date" />

    <ImageView
        android:id="@+id/img_repeat"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_repeat"
        app:layout_constraintStart_toStartOf="@id/img_date"
        app:layout_constraintTop_toBottomOf="@+id/img_date" />

    <TextView
        android:id="@+id/tv_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/h_ng_ng_y"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_repeat"
        app:layout_constraintStart_toEndOf="@+id/img_repeat"
        app:layout_constraintTop_toTopOf="@+id/img_repeat" />

    <ImageView
        android:id="@+id/img_duration"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/icon_duration"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repeat"

        app:layout_constraintStart_toStartOf="@+id/img_time"
        app:layout_constraintTop_toTopOf="@+id/tv_repeat" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/time_duration"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repeat"
        app:layout_constraintStart_toStartOf="@+id/tv_time"
        app:layout_constraintTop_toTopOf="@+id/tv_repeat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#7DD1EB"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_duration"
        app:strokeColor="#1B780F"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/img_bgr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_bgr"
        app:layout_constraintBottom_toTopOf="@+id/tv_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/schedule"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/img_bgr"
        app:layout_constraintTop_toTopOf="@+id/img_bgr" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_lich"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_bgr"
        app:layout_constraintEnd_toEndOf="@+id/img_bgr"
        app:layout_constraintStart_toStartOf="@+id/img_bgr"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/note"
        android:paddingStart="10dp"
        android:textSize="15sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>